--- a/bindings/python/Cargo.toml
+++ b/bindings/python/Cargo.toml
@@ -1,6 +1,9 @@
+# MODIFICATION: Package renamed from safetensors-python to cryptotensors-python
+# Added extension-module feature for Python bindings
+
 [package]
-name = "safetensors-python"
-version = "0.7.0"
+name = "cryptotensors-python"
+version = "0.0.1"
 edition = "2021"
 rust-version = "1.74"
 
@@ -10,7 +13,7 @@ name = "safetensors_rust"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.25", features = ["abi3", "abi3-py38"] }
+pyo3 = { version = "0.25", features = ["abi3", "abi3-py38", "extension-module"] }
 memmap2 = "0.9"
 serde_json = "1.0"
 
