--- a/safetensors/Cargo.toml
+++ b/safetensors/Cargo.toml
@@ -22,6 +22,7 @@ exclude = ["rust-toolchain", "target/*", "Cargo.lock"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# Original safetensors dependencies
 serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
@@ -29,10 +30,20 @@ serde = { version = "1.0", default-features = false, features = [
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 hashbrown = { version = "0.16", features = ["serde"] }
 
+# CryptoTensors: New cryptographic dependencies
+ring = "0.17"
+rand = "0.8"
+zeroize = "1.7"
+once_cell = "1.7"
+base64 = "0.22"
+regorus = "0.4"
+thiserror = "2.0"
+
 [dev-dependencies]
 criterion = "0.6"
 memmap2 = "0.9"
 proptest = "1.7"
+tempfile = "3.10"
 
 [features]
 default = ["std"]
