--- a/.github/workflows/python-bench.yml
+++ b/.github/workflows/python-bench.yml
@@ -59,5 +59,5 @@ jobs:
           # Push and deploy GitHub pages branch automatically
           auto-push: true
           comment-on-alert: true
-          # Mention @rhysd in the commit comment
-          alert-comment-cc-users: '@Narsil'
+          # Mention @aiyah-meloken in the commit comment
+          alert-comment-cc-users: '@aiyah-meloken'
