--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-safetensors/target
-safetensors/**/Cargo.lock
-bindings/python/Cargo.lock
-*.bin
-*.h5
-*.msgpack
-*.pt
-*.pdparams
-*.safetensors
-*.npz
+# Ignore everything except benchmark reports
+*
+!.gitignore
+!README.md
+!dev/
+dev/*
+!dev/bench/
+dev/bench/*
