--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -71,6 +71,7 @@ testing = [
     "pytest-benchmark>=4.0.0",
     # "python-afl>=0.7.3",
     "hypothesis>=6.70.2",
+    "cryptography>=41.0.0",
 ]
 testingfree = [
     "cryptotensors[numpy]",
@@ -80,6 +81,7 @@ testingfree = [
     "pytest-benchmark>=4.0.0",
     # "python-afl>=0.7.3",
     "hypothesis>=6.70.2",
+    "cryptography>=41.0.0",
 ]
 all = [
     "cryptotensors[torch]",
