chore: update Safetensors release check schedule to align with Beijing time
- Changed the cron schedule from UTC to 01:00 Beijing time (UTC+8) for daily checks of Safetensors releases.

--- a/.github/workflows/check-safetensors-release.yml
+++ b/.github/workflows/check-safetensors-release.yml
@@ -2,7 +2,7 @@ name: Check Safetensors Release
 
 on:
   schedule:
-    - cron: '0 0 * * *' # every day at 00:00 UTC
+    - cron: '0 17 * * *' # every day at 01:00 Beijing time (UTC+8)
   workflow_dispatch: # allow manual trigger
     inputs:
       test_mode:
