feat: enhance key management in Safetensors with new provider features
- Added support for temporary key providers and functions to disable and enable providers.
- Updated Cargo.toml to include new features for environment and file-based providers.
- Refactored key provider registration to prioritize providers based on their type.
- Introduced internal functions for registering and managing key providers in Python bindings.
- Improved JSON conversion utilities for better key handling.

--- a/safetensors/Cargo.toml
+++ b/safetensors/Cargo.toml
@@ -46,10 +46,14 @@ proptest = "1.7"
 tempfile = "3.10"
 
 [features]
-default = ["std"]
+default = ["std", "provider-env", "provider-file"]
 std = ["serde/default", "serde_json/default"]
 # Kept for backward compatibility - no-op since alloc is always available
 alloc = []
+
+# Provider features
+provider-env = []
+provider-file = []
 
 [[bench]]
 name = "benchmark"
