feat: enhance Python workflow and benchmark tests with encryption support
- Added installation of the compatible package in the GitHub Actions workflow for testing.
- Updated the benchmark tests to register a key provider for decryption and ensure proper cleanup after tests.
- Refactored test functions to create fresh copies of weights for saving, improving reliability in benchmarks.

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -132,6 +132,7 @@ jobs:
         run: |
           cargo test
           pip install ".[testing]"
+          pip install ../compatible
           pytest -sv tests/
 
       - name: Run tests (freethreaded)
@@ -140,6 +141,7 @@ jobs:
           cargo test
           pip install ".[testingfree]"
           pip install pytest numpy
+          pip install ../compatible
           pytest -sv tests/test_pt*
           pytest -sv tests/test_simple.py
 
