feat: introduce CryptoTensors with encryption, signing, and access control features
- Updated README.md to reflect the new CryptoTensors format, including an introduction, features, and usage examples.
- Enhanced documentation with a new CryptoTensors section, detailing encryption, signing, key management, and access policies.
- Added examples for integrating CryptoTensors with popular ML frameworks and provided guidelines for key management and policy enforcement.
- Introduced new files for encryption and signing documentation, along with examples for practical implementation.

--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -22,3 +22,15 @@
   - local: api/numpy
     title: Numpy API
   title: API
+- sections:
+  - local: crypto/encryption
+    title: Encryption & Decryption
+  - local: crypto/signing
+    title: Signing & Verification
+  - local: crypto/key_management
+    title: Key Management
+  - local: crypto/policy
+    title: Access Policy
+  - local: crypto/examples
+    title: Integration Examples
+  title: CryptoTensors
