--- a/safetensors/Cargo.toml
+++ b/safetensors/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "safetensors"
+name = "cryptotensors"
 version = "0.7.0"
 edition = "2021"
 rust-version = "1.80"
@@ -38,6 +38,7 @@ once_cell = "1.7"
 base64 = "0.22"
 regorus = "0.4"
 thiserror = "2.0"
+libloading = "0.8"
 
 [dev-dependencies]
 criterion = "0.6"
