feat: add GitHub Actions workflow for Python package release
- Introduced a new workflow for automated Python package releases using GitHub Actions.
- Configured jobs for building wheels on multiple platforms (Linux, Windows, macOS) and generating source distributions.
- Implemented version consistency checks between Git tags and Cargo.toml.
- Enhanced the release process with artifact attestation and publishing to PyPI.
- Updated existing workflows to include new dependencies and paths for the `cryptotensors` package.

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -62,7 +62,9 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
         with:
-          workspaces: "bindings/python"
+          workspaces: |
+            bindings/python
+            safetensors
 
       - name: Install Python
         uses: actions/setup-python@v5
