--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -3,7 +3,7 @@
 #
 #    maturin generate-ci github -m bindings/python/Cargo.toml
 #
-name: CI
+name: Python Release
 
 on:
   push:
@@ -166,6 +166,27 @@ jobs:
       # Used to generate artifact attestation
       attestations: write
     steps:
+      - uses: actions/checkout@v4
+      - name: Check version consistency
+        if: "startsWith(github.ref, 'refs/tags/')"
+        run: |
+          # Extract version from tag (remove 'v' prefix if present)
+          TAG_VERSION="${GITHUB_REF#refs/tags/}"
+          TAG_VERSION="${TAG_VERSION#v}"
+          
+          # Extract version from Cargo.toml
+          CARGO_VERSION=$(grep -E '^version\s*=' bindings/python/Cargo.toml | sed -E 's/^version\s*=\s*"([^"]+)".*/\1/')
+          
+          echo "Tag version: $TAG_VERSION"
+          echo "Cargo.toml version: $CARGO_VERSION"
+          
+          if [ "$TAG_VERSION" != "$CARGO_VERSION" ]; then
+            echo "❌ Error: Version mismatch!"
+            echo "Tag version ($TAG_VERSION) does not match Cargo.toml version ($CARGO_VERSION)"
+            exit 1
+          fi
+          
+          echo "✅ Version check passed: $TAG_VERSION"
       - uses: actions/download-artifact@v4
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
@@ -179,3 +200,24 @@ jobs:
         with:
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
+      - name: Build compatible package
+        if: "startsWith(github.ref, 'refs/tags/')"
+        run: |
+          cd bindings/compatible
+          # Create a simple README if it doesn't exist (required by pyproject.toml)
+          if [ ! -f README.md ]; then
+            echo "# safetensors compatibility layer" > README.md
+            echo "A safetensors adapter layer for cryptotensors." >> README.md
+          fi
+          pip install build
+          python -m build
+          mkdir -p ../../compatible-dist
+          cp dist/* ../../compatible-dist/
+      - name: Create GitHub Release
+        if: "startsWith(github.ref, 'refs/tags/')"
+        uses: softprops/action-gh-release@v1
+        with:
+          files: compatible-dist/*
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
