--- a/bindings/compatible/pyproject.toml
+++ b/bindings/compatible/pyproject.toml
@@ -4,7 +4,7 @@ requires-python = '>=3.8'
 description = 'A safetensors adapter layer for cryptotensors, to avoid package requirements errors.'
 version = '0.7.0'
 authors = [
-    {name = 'Nicolas Patry', email = 'patry.nicolas@protonmail.com'}
+    {name = 'Aiyah Meloken', email = 'aiyah_meloken@protonmail.com'}
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -31,8 +31,9 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = 'https://github.com/huggingface/safetensors'
-Source = 'https://github.com/huggingface/safetensors'
+Homepage = 'https://github.com/aiyah-meloken/cryptotensors'
+Source = 'https://github.com/aiyah-meloken/cryptotensors'
+Documentation = 'https://aiyah-meloken.github.io/cryptotensors/'
 
 [project.optional-dependencies]
 numpy = ["numpy>=1.21.6"]
