--- a/bindings/python/Cargo.toml
+++ b/bindings/python/Cargo.toml
@@ -4,7 +4,7 @@
 [package]
 name = "cryptotensors-python"
 version = "0.0.1"
-edition = "2021"
+edition = "2026"
 rust-version = "1.74"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,6 +17,6 @@ pyo3 = { version = "0.25", features = ["abi3", "abi3-py38", "extension-module"] 
 memmap2 = "0.9"
 serde_json = "1.0"
 
-[dependencies.safetensors]
+[dependencies.cryptotensors]
 path = "../../safetensors"
 features = ["provider-env", "provider-file"]
