feat: update Python package metadata and enhance cross-compilation support
- Updated the `cryptotensors` package version to 0.1.0 in `pyproject.toml` and `Cargo.lock`.
- Enhanced the GitHub Actions workflow for building wheels by adding environment variables to support ARM64 cross-compilation.
- Improved the description of the `cryptotensors` package for clarity and detail.

--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = 'cryptotensors'
 requires-python = '>=3.9'
-description = 'CryptoTensors: Safetensors with encryption support for secure model distribution'
+description = 'CryptoTensors is an extension of safetensors that adds encryption, signing, and access control (Rego-based policy engine) while maintaining full backward compatibility with the safetensors format'
 authors = [
     {name = 'Aiyah Meloken', email = 'aiyah_meloken@protonmail.com'}
 ]
