--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -43,6 +43,10 @@ jobs:
           python-version: 3.x
       - name: Build wheels
         uses: PyO3/maturin-action@v1
+        env:
+          # Fix for ring crate cross-compilation to ARM64
+          CFLAGS_aarch64_unknown_linux_gnu: '-D__ARM_ARCH=8'
+          CFLAGS_armv7_unknown_linux_gnueabihf: '-D__ARM_ARCH=7'
         with:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --manifest-path bindings/python/Cargo.toml
@@ -74,6 +78,10 @@ jobs:
           python-version: 3.x
       - name: Build wheels
         uses: PyO3/maturin-action@v1
+        env:
+          # Fix for ring crate cross-compilation to ARM64
+          CFLAGS_aarch64_unknown_linux_musl: '-D__ARM_ARCH=8'
+          CFLAGS_armv7_unknown_linux_musleabihf: '-D__ARM_ARCH=7'
         with:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --manifest-path bindings/python/Cargo.toml
@@ -195,11 +203,10 @@ jobs:
       - name: Publish to PyPI
         if: "startsWith(github.ref, 'refs/tags/')"
         uses: PyO3/maturin-action@v1
-        env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_TOKEN_DIST}}
         with:
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
+          # OIDC is used automatically if no token is provided and trusted publisher is configured
       - name: Build compatible package
         if: "startsWith(github.ref, 'refs/tags/')"
         run: |
