feat: implement end-to-end integration tests for CryptoTensors
- Added a comprehensive suite of integration tests to validate the functionality of CryptoTensors with popular ML frameworks.
- Created scripts for converting models to encrypted format, loading encrypted models, and comparing outputs to ensure encryption transparency.
- Introduced a Docker-based testing environment to streamline the testing process and ensure consistency across different setups.
- Updated README files to include instructions for running integration tests and utilizing the compatible package for seamless model loading.
- Enhanced the GitHub Actions workflow to automate integration testing on pull requests and pushes to the main branch.

--- a/safetensors/Cargo.toml
+++ b/safetensors/Cargo.toml
@@ -7,7 +7,7 @@ homepage = "https://github.com/aiyah-meloken/cryptotensors"
 repository = "https://github.com/aiyah-meloken/cryptotensors"
 documentation = "https://docs.rs/cryptotensors/"
 license = "Apache-2.0"
-keywords = ["safetensors", "huggingface", "Tensors", "Pytorch", "Tensorflow", "cryptotensors", "encryption", "security"]
+keywords = ["safetensors", "Pytorch", "cryptotensors", "encryption", "security"]
 readme = "./README.md"
 description = """
 CryptoTensors is an extension of safetensors that adds encryption, signing, 
